--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,38 @@
 [package]
 name = "rust-stroke-editor"
-version = "0.1.0"
+version = "0.1.2"
 authors = ["planet0104 <planet0104@gmail.com>"]
+edition = "2018"
+
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
-stdweb = "*"
-bincode = "*"
-lazy_static = "1.2.0"
-bzip2 = "*"
+bincode = "1.2.1"
+js-sys = "0.3.36"
+wasm-bindgen = "0.2.59"
+wasm-bindgen-futures = "0.4.9"
+base64 = "0.12.0"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+  'CanvasRenderingContext2d',
+  'HtmlCanvasElement',
+  'HtmlSelectElement',
+  'HtmlInputElement',
+  'HtmlAnchorElement',
+  'HtmlElement',
+  'Headers',
+  'MouseEvent',
+  'Request',
+  'RequestInit',
+  'RequestMode',
+  'Response',
+  'Document',
+  'Element',
+  'Window',
+]
 
 [profile.release]
-lto = true #bzip2必须加！
+lto = true
